samples/_failures_safe/1761729452_77f1b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12714a5d.c: In function ‘main’:
./samples/SAFE/__tmp_12714a5d.c:144:13: error: expected declaration or statement at end of input
  144 |             input_matrix(&mat2, "B");
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_12714a5d.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_12714a5d.c:144:13: error: expected declaration or statement at end of input
